# EmbedSLR_v3.0

./: CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
embedslr/: README_SMART.md  VALIDATION_REPORT.txt  __init__.py  advanced_scoring.py  bibliometrics.py  cli.py  colab_app.py  config.py  demo_smart.py  embeddings.py  ensemble.py  io.py  llm_validation.py  mcda_validation.py  pyproject.toml  run_validation.py  similarity.py  smart_mcdm.py  smart_mcdm_biblio.py  test10_compromise.csv  test1_weight_sensitivity.csv  test2_criteria_removal.csv  test3_cross_method.csv  test3_ws_matrix.csv  test4_param_bonus_start_z.csv  test4_param_top_keywords_k.csv  test5_precision_recall.csv  test6_bootstrap.csv  test7_monte_carlo.csv  test8_rr_addition.csv  test8_rr_removal.csv  test9_normalization.csv  utils.py  wizard.py
examples/: README.md
